--- a/views/addcourse.ejs
+++ b/views/addcourse.ejs
@@ -18,8 +18,8 @@
                 <nav>
                     <ul>
                         <li><a href="/">Mina kurser</a></li>
-                        <li><a href="/addcourse" class="active">Lägg till kurser</a></li>
-                        <li><a href="/changecourse">Ändra kurser</a></li>
+                        <li><a href="/addcourse" class="active">Lägg till kurs</a></li>
+                        <li><a href="/changecourse">Ändra kurs</a></li>
                         <li><a href="/about">Om sidan</a></li>
                     </ul>
                 </nav>
@@ -28,15 +28,30 @@
 
         <main>
 
-            <h1>Lägg till kurser</h1>
+            <h1>Lägg till kurs</h1>
 
-            <p> sfjsdf ölksjdfö adslj sdfljds af ölsjdf ldskjf  ljdfs lsdakjf ö j
-                sjdfö adsj lkjf asldkjfl ljs flsjakdf  lasjf laskj ljds flkdsjf  lasjf 
-                 adsljkf asd lksjdf asdlkjf lasdfkj asd lsfj sdlkjf löasjdf lkadsjf ä.
-            </p>
-       
+            <div class="form-container">
+                <form method="post">
+                    <label for="coursecode">Kurskod:</label>
+                    <br>
+                    <input type="text" id="coursecode" name="coursecode">
+                    <br>
+                    <label for="coursename">Kursnamn:</label>
+                    <br>
+                    <input type="text" id="coursename" name="coursename">
+                    <br>
+                    <label for="progression">Progression:</label>
+                    <br>
+                    <input type="text" id="progression" name="progression">
+                    <br>
+                    <label for="syllabus">Syllabus</label>
+                    <br>
+                    <input type="text" id="syllabus" name="syllabus">
+                    <br>
+                    <input type ="submit" value="Lägg till kurs">
+                </form>
+            </div>
         </main>
-
     </div>
 </body>
 
