--- a/views/index.ejs
+++ b/views/index.ejs
@@ -17,8 +17,8 @@
                 <nav>
                     <ul>
                         <li><a href="/" class="active">Mina kurser</a></li>
-                        <li><a href="/addcourse">Lägg till kurser</a></li>
-                        <li><a href="/changecourse">Ändra kurser</a></li>
+                        <li><a href="/addcourse">Lägg till kurs</a></li>
+                        <li><a href="/changecourse">Ändra kurs</a></li>
                         <li><a href="/about">Om sidan</a></li>
                     </ul>
                 </nav>
@@ -34,9 +34,8 @@
                 <table>
                     <thead>
                         <tr>
-                            <th>Id</th>
-                            <th>Kursnamn</th>
                             <th>Kurskod</th>
+                            <th>Kursnamn</th>
                             <th>Progression</th>
                             <th>Syllabus</th>
                             <th>&nbsp;</th>
@@ -45,14 +44,15 @@
 
                     <tbody>
                         <tr>
-                            <td>1</td>
-                            <td>Backend-baserad webbutveckling</td>
                             <td>DT207G</td>
+                            <td>Backend-baserad webbutveckling</td>
                             <td>B</td>
                             <td><a target="_blank"
                                     href="https://www.miun.se/utbildning/kursplaner-och-utbildningsplaner/DT207G/">Beskrivning</a>
                             </td>
-                            <td><button type="button" class="button">Radera kurs</button></td>
+                            <td><button type="button" class="button">Ändra</button>
+                                <button type="button" class="button">Radera</button>
+                            </td>
                         </tr>
                     </tbody>
                 </table>
