--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -47,8 +47,8 @@ h1 {
 table, th, td {
     padding: 5px;
     margin: 0 auto 0 auto;
-    margin-bottom: 5vh;
-    margin-top: 2vh;
+    margin-bottom: 2vh;
+    margin-top: 4vh;
 }
 
 th {
@@ -104,7 +104,7 @@ p {
     margin-top: 2vh;
     margin-left: 5vw;
     margin-right: 5vw;
-    margin-bottom: 5vh;
+    margin-bottom: 4vh;
     font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     font-size: 0.9em;
     line-height: 1.5em;
@@ -112,3 +112,18 @@ p {
     background-color:rgb(255, 255, 255);
     text-align: center;
 }
+
+input[type=text] {
+    width: 80%;
+    padding: 5px;
+    border-radius: 4px;
+    margin-top: 0.5vh;
+    margin-bottom: 1vh;
+}
+
+.form-container {
+    width: 100%;
+    margin-top: 2vh;
+    margin-bottom: 4vh;
+}
+
