--- a/views/about.ejs
+++ b/views/about.ejs
@@ -19,8 +19,8 @@
                 <nav>
                     <ul>
                         <li><a href="/">Mina kurser</a></li>
-                        <li><a href="/addcourse">Lägg till kurser</a></li>
-                        <li><a href="/changecourse">Ändra kurser</a></li>
+                        <li><a href="/addcourse">Lägg till kurs</a></li>
+                        <li><a href="/changecourse">Ändra kurs</a></li>
                         <li><a href="/about" class="active">Om sidan</a></li>
                     </ul>
                 </nav>
