--- a/views/about.ejs
+++ b/views/about.ejs
@@ -30,12 +30,13 @@
         <main>
 
             <h1>Om sidan</h1>
-            
+
+            <div class="text-container">
             <p> sfjsdf ölksjdfö adslj sdfljds af ölsjdf ldskjf  ljdfs lsdakjf ö j
                 sjdfö adsj lkjf asldkjfl ljs flsjakdf  lasjf laskj ljds flkdsjf  lasjf 
                  adsljkf asd lksjdf asdlkjf lasdfkj asd lsfj sdlkjf löasjdf lkadsjf ä.
             </p>
-
+            </div>
         </main>
     </div>
 </body>
