--- a/views/changecourse.ejs
+++ b/views/changecourse.ejs
@@ -48,7 +48,7 @@
                     <br>
                     <input type="text" id="syllabus" name="syllabus">
                     <br>
-                    <input type ="submit" value="Ändra kurs">
+                    <input type ="submit" value="Ändra kurs" class="button">
                 </form>
             </div>
         </main>
