--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -66,6 +66,7 @@ td {
     margin: 0 auto 0 auto;
     margin-bottom: 2vh;
     margin-top: 2vh;
+    text-align: left;
 }
 
 th {
@@ -84,9 +85,9 @@ thead {
     border-radius: 30px;
     padding-top: 2px;
     padding-bottom: 2px;
-    padding-right: 6px;
-    padding-left: 6px;
-    font-size: 1em;
+    padding-right: 4px;
+    padding-left: 4px;
+    font-size: 0.8em;
 }
 
 a {
