--- a/views/addcourse.ejs
+++ b/views/addcourse.ejs
@@ -32,26 +32,28 @@
 
             <div class="form-container">
                 <form method="post">
-                    <% if(error !=="") { %>
-                        <p class="error"><%=error %></p>
-                    <% } %>
-                    <label for="coursecode">Kurskod:</label>
-                    <br>
-                    <input type="text" id="coursecode" name="coursecode">
-                    <br>
-                    <label for="coursename">Kursnamn:</label>
-                    <br>
-                    <input type="text" id="coursename" name="coursename">
-                    <br>
-                    <label for="progression">Progression:</label>
-                    <br>
-                    <input type="text" id="progression" name="progression">
-                    <br>
-                    <label for="syllabus">Syllabus</label>
-                    <br>
-                    <input type="text" id="syllabus" name="syllabus">
-                    <br>
-                    <input type ="submit" value="Lägg till kurs" class="button">
+                    <% if(error !=="" ) { %>
+                        <p class="error">
+                            <%=error %>
+                        </p>
+                        <% } %>
+                            <label for="coursecode">Kurskod:</label>
+                            <br>
+                            <input type="text" id="coursecode" name="coursecode">
+                            <br>
+                            <label for="coursename">Kursnamn:</label>
+                            <br>
+                            <input type="text" id="coursename" name="coursename">
+                            <br>
+                            <label for="progression">Progression:</label>
+                            <br>
+                            <input type="text" id="progression" name="progression">
+                            <br>
+                            <label for="syllabus">Syllabus</label>
+                            <br>
+                            <input type="text" id="syllabus" name="syllabus">
+                            <br>
+                            <input type="submit" value="Lägg till kurs" class="button">
                 </form>
             </div>
         </main>
