--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -59,6 +59,8 @@ h1 {
     text-align: center;
 }
 
+
+/* Styling av tabell */
 table,
 th,
 td {
@@ -131,6 +133,7 @@ li a {
     background-color: white;
 }
 
+/* Bakgrund på aktiv länk */
 .active {
     background-color: rgb(0, 105, 79);
     color: white;
@@ -145,6 +148,7 @@ p {
     background-color: rgb(255, 255, 255);
 }
 
+/* Styling av formulär */
 input[type=text] {
     width: 60%;
     padding: 5px;
