--- a/views/about.ejs
+++ b/views/about.ejs
@@ -32,11 +32,11 @@
 
             <div class="text-container">
             <p> I den första laborationen för kursen DT207G, Backend-baserad webbutveckling har NodeJs, Express, Ejs och Nodemon använts för att ansluta till en relationsdatabas skapad med SQLite3.
-                Från en vy skickas data in via ett formulär, lagras i databasen och läses ut i en tabell.
+                Från en vy skickas data via ett formulär, lagras i databasen och läses ut i en tabell.
                 Det går även att radera data. SQL-frågor som SELECT, INSERT OCH DELETE har använts tillsammans med parametrerade frågor samt kontroll av input i formulärfält.
-                Ett litet ER-diagram med en tabell har skapats i draw.io och ett GitHub-repo har initierats.
-                Jag tycker att uppgiften har varit kul och utvecklande men jag fastnade i att utveckla sidan för att uppdatera data.
-                Stylingen försvann mystiskt och jag tog därför bort sidan men gör ett nytt försök i nästa laboration.
+                Ett ER-diagram med en tabell har skapats i drawio och ett GitHub-repo har initierats.
+                Jag tycker att uppgiften har varit kul och utvecklande men fastnade i att utveckla sidan för att uppdatera data.
+                Stylingen försvann mystiskt och jag tog därför bort sidan men gör ett nytt försök igen i nästa laboration.
             </p>
             </div>
         </main>
